Module5. Convolutional Networks(11/2,11/9)

--- a/Lab7_CNNs.ipynb
+++ b/Lab7_CNNs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "7oeTRribu75d"
    },
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {
     "id": "DkUc8JGCIGWo"
    },
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 4,
    "metadata": {
     "id": "5fpD87Dz-yIM"
    },
@@ -1535,20 +1535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 5,
    "metadata": {
     "id": "8aVDe90h-61E"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "58892288/58889256 [==============================] - 2s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conv_base = VGG16(weights=\"imagenet\",include_top=False,input_shape=(300,300,3))"
    ]
@@ -1575,22 +1566,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.engine.functional.Functional at 0x7fc9fbfd8b10>"
+       "<tensorflow.python.keras.engine.functional.Functional at 0x7ffd06f0f090>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conv_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tfk.Sequential()\n",
+    "\n",
+    "#input_shape=(300,300,3), output unit size is 3 for rock-paper-scissors \n",
+    "\n",
+    "model.add(conv_base) #smooth stride; padding: handle edges;\n",
+    "\n",
+    "model.add(tfkl.Flatten())\n",
+    "\n",
+    "model.add(tfkl.Dense(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_5\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "vgg16 (Functional)           (None, 9, 9, 512)         14714688  \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 41472)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 3)                 124419    \n",
+      "=================================================================\n",
+      "Total params: 14,839,107\n",
+      "Trainable params: 14,839,107\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "10/10 [==============================] - 154s 15s/step - loss: 4.8354 - acc: 0.3000\n",
+      "Epoch 2/5\n",
+      "10/10 [==============================] - 157s 16s/step - loss: 4.8354 - acc: 0.3000\n",
+      "Epoch 3/5\n",
+      "10/10 [==============================] - 158s 16s/step - loss: 5.6917 - acc: 0.3531\n",
+      "Epoch 4/5\n",
+      "10/10 [==============================] - 290s 29s/step - loss: 5.3391 - acc: 0.3313\n",
+      "Epoch 5/5\n",
+      "10/10 [==============================] - 158s 16s/step - loss: 5.2888 - acc: 0.3281\n"
+     ]
+    }
+   ],
+   "source": [
+    "#take much time (already decrease the time by reducing steps_per_epoch and epochs)\n",
+    "model.compile(\n",
+    "    optimizer=tfk.optimizers.RMSprop(),\n",
+    "    loss=tfk.losses.CategoricalCrossentropy(),\n",
+    "    metrics=[\"acc\"]\n",
+    ")\n",
+    "\n",
+    "results = model.fit(train_data, batch_size=32, steps_per_epoch=10, epochs=5,verbose=1)"
    ]
   },
   {
